reverted web freedom plan changes

--- a/react_webviews/src/freedom_plan/mini-components/mini-components.scss
+++ b/react_webviews/src/freedom_plan/mini-components/mini-components.scss
@@ -1,12 +1,15 @@
 .select-freedom-plan {
-  .wv-bc-left .wv-bcl-subtitle {
-    margin: 0px;
-  }
-
   .select-freedom-plan-container {
+    display: flex;
+    overflow: auto;
+    width: 100%;
+    height: 110px;
+    align-items: center;
+
     .sfpc-loader {
-      height: 50px !important;
-      margin: 0px 0px 10px !important;
+      width: 110px !important;
+      height: 88px !important;
+      margin: 0 15px 5px 0 !important;
     }
 
     .freedom-plan-option {
@@ -16,19 +19,22 @@
       font-size: 12px;
       line-height: 19px;
       color: var(--gunmetal);
+      min-width: 110px;
+      min-height: 88px;
       display: flex;
-      align-items: center;
-      padding: 15px 20px;
+      flex-direction: column;
+      justify-content: center;
+      padding: 10px;
       position: relative;
-      margin-bottom: 10px;
+      margin: 0 15px 0px 0;
       cursor: pointer;
 
       .selected-icon {
         position: absolute;
         width: 22px !important;
         height: 22px !important;
-        top: -11px;
-        right: -3px;
+        top: -9px;
+        right: -9px;
       }
 
       .fpo-name {
@@ -39,13 +45,13 @@
         font-size: 16px;
         line-height: 21px;
         color: var(--primary);
-        padding-left: 10px;
+        padding-top: 10px;
       }
 
       .fpo-popular {
         position: absolute;
         top: -11px;
-        left: 20px;
+        left: 18px;
         background: #ffe0ec;
         border-radius: 10px;
         font-weight: bold;
@@ -59,16 +65,11 @@
     .selected-plan {
       border: 2px solid var(--primary);
     }
-
-    .popular-plan {
-      margin-top: 20px;
-    }
   }
 
   .helper-note {
     font-size: 11px;
     color: var(--steelgrey);
-    padding-bottom: 13px;
   }
 
   .error-message {
