UPDATE: Card Vertical 1. using stack for child alignment

--- a/react_webviews/src/designSystem/molecules/CardVertical/CardVertical.scss
+++ b/react_webviews/src/designSystem/molecules/CardVertical/CardVertical.scss
@@ -1,21 +1,6 @@
 .cv-wrapper {
   padding: 16px;
-  display: flex;
-  flex-direction: column;
   background-color: white;
   border-radius: 12px;
-  flex: 1;
-  cursor: pointer;
-
-  .cv-img-top + .card-vertical-title {
-    margin-top: 4px;
-  }
-
-  * + .card-vertical-subtitle {
-    margin-top: 4px;
-  }
-
-  * + .card-vertical-description {
-    margin-top: 4px;
-  }
+  cursor: default;
 }
