--- a/react_webviews/src/designSystem/molecules/CategoryCard/CategoryCard.scss
+++ b/react_webviews/src/designSystem/molecules/CategoryCard/CategoryCard.scss
@@ -1,20 +1,17 @@
 .cc-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    min-width: 103px;
-    cursor: pointer;
+  min-width: 103px;
+  cursor: pointer;
+  > img {
+    margin-bottom: 4px;
+  }
+
+  &.cc-wrapper-large-variant {
+    > img {
+      margin-bottom: 8px;
+    }
+  }
 }
 
 .cc-wrapper-large-variant {
-    min-width: 159px;
-}
-
-.cc-lg-subtitle {
-    margin-top: 8px;
-}
-
-.cc-sm-subtitle {
-    margin-top: 4px;
+  min-width: 159px;
 }
