--- a/react_webviews/src/designSystem/molecules/InvestmentCard/InvestmentCard.scss
+++ b/react_webviews/src/designSystem/molecules/InvestmentCard/InvestmentCard.scss
@@ -16,6 +16,17 @@
       margin-right: 16px;
     }
   }
+
+
+  .ic-left-section {
+    flex: 1 1 50%;
+    display: flex;
+    flex-direction: column;
+  }
+  .ic-right-section {
+    flex: 1 1 50%;
+  }
+
   .ic-input-field-section,
   .ic-footer-section,
   .ic-pills-wrapper {
@@ -37,13 +48,10 @@
     }
   }
 
-  .ic-left-section {
-    flex: 1 1 50%;
-    display: flex;
-    flex-direction: column;
-  }
-  .ic-right-section {
-    flex: 1 1 50%;
+  .ic-input-field-section {
+    .ic-right-section {
+      flex-basis: 20%;
+    }
   }
 
   .ic-footer-section {
@@ -65,6 +73,17 @@
         &.fc-cursor-pointer {
             cursor: pointer;
         }
+    }
+  }
+}
+
+
+@media (max-width: 600px) {
+  .invest-card-wrapper {
+    .ic-input-field-section {
+      .ic-right-section {
+        flex-basis: 50%;
+      }
     }
   }
 }
