--- a/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
+++ b/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
@@ -1,166 +1,99 @@
 .diy-category-landing-wrapper {
+  background-color: white;
+  margin: 0px -16px;
+  padding: 0px 16px;
+
   .diy-c-trending-wrapper {
     padding-top: 32px;
-    padding-bottom: 44px;
-  }
-}
-.swiper-custom-pagination {
-  margin-top: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  .swiper-pagination-bullet {
-    width: 4px;
-    height: 4px;
-    margin-right: 4px;
-    &:last-child {
-      margin-right: 0px;
-    }
+    padding-bottom: 24px;
+    margin: 0px -16px;
+    background-color: rgb(216, 132, 132);
 
-    &.swiper-pagination-bullet-active {
-      width: 8px;
-      // background: var(--primary);
+    .swiper-container {
+      padding: 0px 16px;
     }
   }
-}
-.diy-c-trending-wrapper {
-  .diy-c-trending-lists {
-    overflow-y: auto;
-    display: flex;
-    flex-direction: row;
-    margin-left: -16px;
-    margin-right: -16px;
 
-    .diy-c-trending-item {
-      padding: 16px 10px 1px 0px;
-      &:first-child {
-        padding-left: 16px;
-      }
-      &:last-child {
-        padding-right: 16px;
+  .diy-c-category-wrapper {
+    background-color: lightblue;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    margin: 0px -16px;
+    .swiper-container {
+      padding: 0px 16px;
+      .swiper-wrapper {
+        display: grid;
+        grid-auto-flow: column;
+        row-gap: 8px;
+        grid-template-rows: 1fr 1fr;
+        .swiper-slide {
+          margin: 0px !important;
+          width: 100%;
+        }
       }
     }
   }
-}
 
-.diy-c-trending-lists::-webkit-scrollbar {
-  display: none;
-}
-.diy-c-trending-lists {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-.diy-c-category-wrapper {
-  background-color: #f6f6f6;
-  padding-top: 24px;
-  padding-bottom: 44px;
-  margin-left: -16px;
-  margin-right: -16px;
-  padding-left: 16px;
-  padding-right: 16px;
-}
-.diy-c-titleWrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 16px;
-}
-
-.diy-c-c-category-list {
-  display: flex;
-  overflow-x: auto;
-  flex-direction: column;
-  gap: 8px;
-  padding-bottom: 10px;
-  margin-left: -16px;
-  margin-right: -16px;
-}
-
-.diy-c-c-category-item-first,
-.diy-c-c-category-item-second {
-  display: flex;
-  flex-direction: row;
-  gap: 8px;
-  flex: 1 1 0px;
-  padding-top: 1px;
-}
-.diy-c-c-category-item {
-  flex: 1 1 0px;
-  &:first-child {
-    padding-left: 16px;
+  .diy-c-tax-saving-wrapper {
+    padding-top: 24px;
+    padding-bottom: 16px;
+    .diy-c-card-horz-wrapper {
+      margin-top: 16px;
+    }
   }
-  &:last-child {
-    padding-right: 16px;
-  }
-}
 
-.diy-c-tax-saving-wrapper {
-  padding-top: 24px;
-  padding-bottom: 16px;
-  .diy-c-card-horz-wrapper {
-    margin-top: 16px;
-  }
-}
-
-.diy-c-sector-theme {
-  padding-top: 16px;
-  padding-bottom: 20px;
-  .diy-c-sector-list {
-    display: flex;
-    flex-direction: row;
-    overflow-x: auto;
-    margin-left: -16px;
-    margin-right: -16px;
-
-    .diy-c-sector-item {
-      margin-right: 16px;
-      &:first-child {
-        padding-left: 16px;
-      }
-      &:last-child {
-        padding-right: 16px;
+  .diy-c-sector-theme {
+    padding-top: 16px;
+    padding-bottom: 20px;
+    margin: 0px -16px;
+    background-color: lightcoral;
+    .diy-c-sector-list {
+      display: flex;
+      flex-direction: row;
+      overflow-x: auto;
+      margin-left: -16px;
+      margin-right: -16px;
+  
+      .diy-c-sector-item {
+        margin-right: 16px;
+        &:first-child {
+          padding-left: 16px;
+        }
+        &:last-child {
+          padding-right: 16px;
+        }
       }
     }
   }
-}
 
-.diy-c-sector-list::-webkit-scrollbar {
-  display: none;
-}
+  .diy-c-investment-style-wrapper {
+    background-color: lightpink;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    margin: 0px -16px;
+    .swiper-container {
+      padding: 0px 16px;
 
-.diy-c-sector-list {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-.diy-c-investment-style-wrapper {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  .diy-c-investment-list {
-    margin-top: 16px;
-    display: flex;
-    flex-direction: row;
-    overflow-x: auto;
-    margin-left: -16px;
-    margin-right: -16px;
-    .diy-c-investment-item {
-      padding: 16px 8px 16px 0px;
-      &:first-child {
-        padding-left: 16px;
+      .swiper-slide {
+        height: auto;
       }
-      &:last-child {
-        padding-right: 16px;
+    }
+    .diy-c-investment-list {
+      margin-top: 16px;
+      display: flex;
+      flex-direction: row;
+      overflow-x: auto;
+      margin-left: -16px;
+      margin-right: -16px;
+      .diy-c-investment-item {
+        padding: 16px 8px 16px 0px;
+        &:first-child {
+          padding-left: 16px;
+        }
+        &:last-child {
+          padding-right: 16px;
+        }
       }
     }
   }
-}
-.diy-c-investment-list::-webkit-scrollbar {
-  display: none;
-}
-
-.diy-c-investment-list {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
 }
