Update: 1. using api to update the data. 2. updated nonRoundingToFixed to support 0.

--- a/react_webviews/src/pages/fundDetailsV2/fundDetailsV2.scss
+++ b/react_webviews/src/pages/fundDetailsV2/fundDetailsV2.scss
@@ -6,4 +6,13 @@
             justify-content: flex-start !important;
         }
     }
+
+    .fund-details-asset-section {
+        .fund-asset-perc {
+            margin-left: auto;
+            margin-right: auto;
+            height: 4px;
+            border-radius: 100px;
+        }
+    }
 }
