Fixed kyc initialization

--- a/react_webviews/src/dashboard/Invest/components/DemoLanding/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/DemoLanding/Landing.scss
@@ -1,10 +1,14 @@
 .invest-landing {
     padding-bottom: 20px;
   
-    .generic-page-subtitle {
-      margin: -10px 0 20px 0;
+    .generic-page-subtitle, .il-subtitle-skelton {
+      margin: -10px 0 20px 0 !important;
     }
   
+    .il-subtitle-skelton {
+      width: 75% !important;
+    }
+    
     .invest-fp-loader {
       min-height: 170px;
       margin-bottom: 15px !important;
