--- a/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
@@ -1,8 +1,12 @@
 .invest-landing {
   padding-bottom: 20px;
 
-  .generic-page-subtitle {
-    margin: -10px 0 20px 0;
+  .generic-page-subtitle, .il-subtitle-skelton {
+    margin: -10px 0 20px 0 !important;
+  }
+
+  .il-subtitle-skelton {
+    width: 75% !important;
   }
 
   .invest-fp-loader {
