--- a/react_webviews/src/dashboard/Invest/components/SdkLanding/SdkLanding.scss
+++ b/react_webviews/src/dashboard/Invest/components/SdkLanding/SdkLanding.scss
@@ -19,9 +19,14 @@
     }
 
     .single-marketing-banner {
-      min-height: 120px;
       width: 100%;
-      cursor: pointer;
+
+      .marketing-banner-icon-wrapper {
+        min-height: 140px;
+        width: 100%;
+        cursor: pointer;
+        margin-right: 0px;
+      }
     }
   }
 
