--- a/react_webviews/src/gold/components/Style.scss
+++ b/react_webviews/src/gold/components/Style.scss
@@ -1588,6 +1588,7 @@ img.gold-offer-slide-img {
 }
 
 .gold-home {
+  margin-bottom: 50px;
   .subtext {
     font-size: 14px;
     margin-bottom: 12px;
