1. Added number of funds & returns content. 2. Added add or remove fund from cart functionality. 3. Minor css fixes

--- a/react_webviews/src/designSystem/molecules/ProductItem/ProductItem.scss
+++ b/react_webviews/src/designSystem/molecules/ProductItem/ProductItem.scss
@@ -1,5 +1,6 @@
 .product-item-wrapper {
   cursor: pointer !important;
+  padding-bottom: 16px;
 
   .product-item-child-wrapper {
     display: flex;
