--- a/react_webviews/src/pages/DIY/SubCategoryLanding/SubCategoryLanding.scss
+++ b/react_webviews/src/pages/DIY/SubCategoryLanding/SubCategoryLanding.scss
@@ -1,4 +1,7 @@
 .sub-category-landing-wrapper {
+  .sub-category-filter-info {
+    padding: 8px 16px;
+  }
 
   .sub-category-swipper-wrapper {
     margin: 0px -16px;
