--- a/react_webviews/src/pages/fundDetailsV2/FundGraph.scss
+++ b/react_webviews/src/pages/fundDetailsV2/FundGraph.scss
@@ -1,43 +1,28 @@
 // Passive Fund Chart Styles
 .fund-graph-wrapper {
+  margin-top: 24px;
+  margin-right: -14px;
   .tooltip-container {
     background-color: white;
-    padding: 10px 10px;
-    border-radius: 4px;
-  }
-  .date {
-    text-align: center;
-  }
-  .dot {
-    background-color: #7ed321;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    align-self: center;
-    margin-right: 5px !important;
-  }
-  .next-line-container {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-  }
-  .date {
-    font-size: 10px;
-    font-weight: 500;
-    line-height: 16px;
-    letter-spacing: 1px;
-    text-align: center;
-    color: var(--steelgrey);
-    padding: 0;
-    margin: 0;
-  }
-  .content {
-    font-size: 13px;
-    line-height: 20px;
-    font-weight: 400;
-    letter-spacing: 0px;
-    color: var(--dark);
-    padding: 0;
-    margin: 0;
+    padding: 8px 16px;
+    box-shadow: 0px 6px 12px -6px rgba(0, 0, 0, 0.04), 0px 0px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+
+    .tooltip-date {
+      font-size: 12px;
+      line-height: 19px;
+      color: #5a6389;
+    }
+
+    .tooltip-nav-amount {
+      font-size: 12px;
+      line-height: 19px;
+      color: #132056;
+    }
   }
   .xaxis-label {
     font-size: 9px;
