UPDATE: Mf Orders 1. added sx support to header title 2. InvestmentCard added separator support 3. added support fo investment type for fisdom and finity

--- a/react_webviews/src/designSystem/molecules/InvestmentCard/InvestmentCard.scss
+++ b/react_webviews/src/designSystem/molecules/InvestmentCard/InvestmentCard.scss
@@ -30,7 +30,7 @@
   .ic-input-field-section,
   .ic-footer-section,
   .ic-pills-wrapper {
-    padding: 16px 0px;
+    padding: 0px 0px 16px 0px;
     > div {
       flex-basis: 50%;
     }
