--- a/react_webviews/src/designSystem/molecules/NavigationPopup/NavigationPopup.scss
+++ b/react_webviews/src/designSystem/molecules/NavigationPopup/NavigationPopup.scss
@@ -5,6 +5,7 @@
     box-shadow: 0px 6px 12px -6px rgba(0, 0, 0, 0.04),
       0px 0px 1px rgba(0, 0, 0, 0.2);
     border-radius: 12px;
+    max-height: unset !important;
     transition-duration: 300ms !important;
   }
 
