--- a/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
+++ b/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
@@ -10,6 +10,12 @@
 
     .swiper-container {
       padding: 0px 16px;
+      .swiper-slide {
+        height: auto;
+        > div {
+          height: 100%;
+        }
+      }
     }
   }
 
