--- a/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
+++ b/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
@@ -3,6 +3,11 @@
   margin: 0px -16px;
   padding: 0px 16px;
 
+  .diy-landing-lottie-anim {
+    width: 140px;
+    height: 120px;
+  }
+
   .diy-c-trending-wrapper {
     padding-top: 32px;
     padding-bottom: 24px;
