--- a/react_webviews/src/pages/DIY/SubCategoryLanding/SubCategoryLanding.scss
+++ b/react_webviews/src/pages/DIY/SubCategoryLanding/SubCategoryLanding.scss
@@ -3,6 +3,15 @@
     padding: 8px 16px;
   }
 
+  .scl-skelton {
+    min-height: 100px;
+    margin-bottom: 20px !important;
+  }
+
+  .scl-skelton:first-child {
+    margin-top: 20px !important;
+  }
+
   .sub-category-swipper-wrapper {
     margin: 0px -16px;
   }
