--- a/react_webviews/src/designSystem/molecules/CollapsibleSection/CollapsibleSection.scss
+++ b/react_webviews/src/designSystem/molecules/CollapsibleSection/CollapsibleSection.scss
@@ -2,6 +2,11 @@
     background-color: white;
     border-radius: 12px;
 
+    &.collapsed-disabled {
+        pointer-events: none;
+        opacity: 0.3;
+    }
+
     .c-label-wrapper {
         background-color: white;
         border-radius: 12px;
