--- a/react_webviews/src/designSystem/molecules/NavigationPopup/NavigationPopup.scss
+++ b/react_webviews/src/designSystem/molecules/NavigationPopup/NavigationPopup.scss
@@ -30,3 +30,11 @@
     padding-top: 0px;
   }
 }
+
+@media only screen and (min-width: 786px) {
+  .molecule-navigation-popup {
+    .MuiPaper-root {
+      left: 185px !important;
+    }
+  }
+}
