update: added falg to control investment in sip/lumpsum of any fund.

--- a/react_webviews/src/designSystem/molecules/SipDateSelector/SipDateSelector.scss
+++ b/react_webviews/src/designSystem/molecules/SipDateSelector/SipDateSelector.scss
@@ -18,10 +18,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      cursor: pointer;
       position: relative;
       .selected-date-text {
         position: absolute;
-        right: 60px;
+        right: 30%;
       }
     }
   }
