--- a/react_webviews/src/pages/DIY/CompleteKyc/CompleteKyc.scss
+++ b/react_webviews/src/pages/DIY/CompleteKyc/CompleteKyc.scss
@@ -3,6 +3,11 @@
     margin-top: 32px;
   }
 
+  .kyc-compl-lottie-anim {
+    width: 140px;
+    height: 120px;
+  }
+
   .ck-trust-icon-wrapper {
     margin-top: 100px;
   }
