UPDATE: refactored the Container Changes 2, added I framE container(WIP).

--- a/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
+++ b/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
@@ -1,5 +1,5 @@
 .diy-category-landing-wrapper {
-  background-color: white;
+  // background-color: white;
   margin: 0px -16px;
   padding: 0px 16px;
 
