--- a/react_webviews/src/designSystem/organisms/Container/Container.scss
+++ b/react_webviews/src/designSystem/organisms/Container/Container.scss
@@ -3,7 +3,7 @@
   overflow: auto;
   position: relative;
 
-  .container-nav-header{
+  .container-nav-header {
     padding-top: 56px;
     flex: 1;
 
@@ -52,16 +52,28 @@
   }
 }
 
+.Iframe-container-wrapper {
+  background-color: white;
+  height: 100%;
+  overflow: hidden;
+  overflow-y: auto;
+  padding: 80px;
+  padding-bottom: 0px;
+
+  .nav-bar-tabs-wrapper.tab-position-change {
+    position: relative;
+    width: 100%;
+  }
+}
+
 @media (max-width: 600px) {
   .container-wrapper {
-
-    .container-nav-header{
+    .container-nav-header {
       .nav-header-top-section {
         top: 0px;
         width: 100%;
       }
     }
-
 
     .container-footer-wrapper {
       &.container-fixed-footer {
