--- a/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
+++ b/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
@@ -1,7 +1,8 @@
 .diy-category-landing-wrapper {
-  // background-color: white;
-  margin: 0px -16px;
-  padding: 0px 16px;
+  .landing-header-wrapper {
+    padding: 0px 16px;
+    background-color: white;
+  }
 
   .diy-landing-lottie-anim {
     width: 140px;
@@ -9,9 +10,8 @@
   }
 
   .diy-c-trending-wrapper {
-    padding-top: 32px;
-    padding-bottom: 24px;
-    margin: 0px -16px;
+    padding: 32px 0px 24px 0px;
+    background-color: white;
 
     .swiper-container {
       padding: 0px 16px;
@@ -25,9 +25,7 @@
   }
 
   .diy-c-category-wrapper {
-    padding-top: 24px;
-    padding-bottom: 24px;
-    margin: 0px -16px;
+    padding: 24px 0px;
     .swiper-container {
       padding: 0px 16px;
       .swiper-wrapper {
@@ -44,17 +42,16 @@
   }
 
   .diy-c-tax-saving-wrapper {
-    padding-top: 24px;
-    padding-bottom: 16px;
+    background-color: white;
+    padding: 24px 16px 16px 16px;
     .diy-c-card-horz-wrapper {
       margin-top: 16px;
     }
   }
 
   .diy-c-sector-theme {
-    padding-top: 16px;
-    padding-bottom: 20px;
-    margin: 0px -16px;
+    background-color: white;
+    padding: 16px 0px;
     .diy-c-sector-list {
       display: flex;
       flex-direction: row;
@@ -75,9 +72,8 @@
   }
 
   .diy-c-investment-style-wrapper {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    margin: 0px -16px;
+    background-color: white;
+    padding: 16px 0;
     .swiper-container {
       padding: 0px 16px;
 
