--- a/react_webviews/src/pages/DIY/SubCategoryFundList/SubCategoryFundList.scss
+++ b/react_webviews/src/pages/DIY/SubCategoryFundList/SubCategoryFundList.scss
@@ -20,6 +20,7 @@
     .sc-confirmation-btn-wrapper {
       max-width: fit-content;
       margin: 0px auto;
+      padding-bottom: 16px;
     }
   }
 }
