Fixed mf order css

--- a/react_webviews/src/pages/MfOrder/MfOrder.scss
+++ b/react_webviews/src/pages/MfOrder/MfOrder.scss
@@ -1,7 +1,7 @@
 .mf-order-wrapper {
-  padding-top: 25px;
-  background-color: white;
-
+  .mf-order-section {
+    padding-top: 25px;
+  }
   .mf-investment-card-wrapper {
     position: relative;
 
