--- a/react_webviews/src/pages/DIY/InvestmentProcess/InvestmentProcess.scss
+++ b/react_webviews/src/pages/DIY/InvestmentProcess/InvestmentProcess.scss
@@ -1,6 +1,7 @@
 .investment-process-wrapper {
   background-color: white;
-  
+  padding-top: 24px;
+
   .ip-points-wrapper {
     margin-top: 24px;
     .ip-points-list {
