Fixed fund details css

--- a/react_webviews/src/pages/fundDetailsV2/fundDetailsV2.scss
+++ b/react_webviews/src/pages/fundDetailsV2/fundDetailsV2.scss
@@ -5,6 +5,10 @@
     }
   }
 
+  .fund-details-section {
+    padding: 0px 16px;
+  }
+
   .fund-details-asset-section {
     .fund-asset-perc {
       height: 4px;
