--- a/react_webviews/src/pages/fundDetailsV2/FundGraph.scss
+++ b/react_webviews/src/pages/fundDetailsV2/FundGraph.scss
@@ -1,7 +1,8 @@
 // Passive Fund Chart Styles
 .fund-graph-wrapper {
-  margin-top: 24px;
-  margin-right: -14px;
+  padding-top: 24px;
+  background-color: white;
+
   .tooltip-container {
     background-color: white;
     display: flex;
