--- a/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
+++ b/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
@@ -1,6 +1,6 @@
 .diy-category-landing-wrapper {
   .landing-header-wrapper {
-    padding: 0px 16px;
+    padding: 0px 16px 32px 16px;
     background-color: white;
   }
 
@@ -10,7 +10,7 @@
   }
 
   .diy-c-trending-wrapper {
-    padding: 32px 0px 24px 0px;
+    padding-bottom: 24px;
     background-color: white;
 
     .swiper-container {
