--- a/react_webviews/src/pages/DIY/SubCategoryFundList/SubCategoryFundList.scss
+++ b/react_webviews/src/pages/DIY/SubCategoryFundList/SubCategoryFundList.scss
@@ -30,7 +30,7 @@
     .sub-category-custom-footer {
       .sc-confirmation-btn-wrapper {
         max-width: 100%;
-        padding: 0px 16px;
+        padding: 0px 16px 16px 16px;
         margin: 0px;
       }
     }
