--- a/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
+++ b/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
@@ -25,7 +25,7 @@
   }
 
   .diy-c-category-wrapper {
-    padding: 24px 0px;
+    padding: 0px 0px 24px 0px;
     .swiper-container {
       padding: 0px 16px;
       .swiper-wrapper {
@@ -39,6 +39,10 @@
         }
       }
     }
+  }
+
+  .diy-c-trending-wrapper + .diy-c-category-wrapper {
+    padding-top: 0px;
   }
 
   .diy-c-tax-saving-wrapper {
