--- a/react_webviews/src/designSystem/molecules/SipDateSelector/SipDateSelector.scss
+++ b/react_webviews/src/designSystem/molecules/SipDateSelector/SipDateSelector.scss
@@ -26,6 +26,19 @@
       }
     }
   }
+
+  .sip-title-wrapper {
+    position: relative;
+    margin-bottom: 16px;
+    > button {
+      position: absolute;
+      padding: 0px;
+      left: 0;
+    }
+    > p {
+      flex: 1;
+    }
+  }
 }
 
 @media only screen and (max-width: 600px) {
