--- a/react_webviews/src/pages/fundDetailsV2/FundGraph.scss
+++ b/react_webviews/src/pages/fundDetailsV2/FundGraph.scss
@@ -3,6 +3,10 @@
   padding-top: 24px;
   background-color: white;
 
+  .fund-details-timeline {
+    padding: 0 10px;
+  }
+
   .tooltip-container {
     background-color: white;
     display: flex;
