Fixed bottomsheet css

--- a/react_webviews/src/featureComponent/DIY/Filters/FilterReturnBottomSheet.scss
+++ b/react_webviews/src/featureComponent/DIY/Filters/FilterReturnBottomSheet.scss
@@ -21,6 +21,7 @@
     .MuiDialog-paper {
       margin: 0px !important;
       max-width: var(--desktop-width);
+      width: 100%;
       border-top-left-radius: 12px;
       border-top-right-radius: 12px;
     }
