UPDATED: moved fund graph to common file. 2. added rolling return graph.

--- a/react_webviews/src/pages/fundDetailsV2/FundGraph.scss
+++ b/react_webviews/src/pages/fundDetailsV2/FundGraph.scss
@@ -2,7 +2,9 @@
 .fund-graph-wrapper {
   padding-top: 24px;
   background-color: white;
-
+}
+.fund-graph-wrapper,
+.common-graph-wrapper {
   .fund-details-timeline {
     padding: 0 10px;
   }
