--- a/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
+++ b/react_webviews/src/pages/DIY/CommonCategoryLanding/CommonCategoryLanding.scss
@@ -1,5 +1,6 @@
 .diy-main-wrapper {
   background-color: #F8F8FA;
+  padding-bottom: 100px !important;
   .diy-category-landing-wrapper {
     .landing-header-wrapper {
       padding: 0px 16px 32px 16px;
@@ -75,6 +76,9 @@
 
     .diy-c-investment-style-wrapper {
       background-color: white;
+      &.diy-c-investment-style-hybrid {
+        background-color: #F8F8FA;
+      }
       padding: 16px 0;
       .swiper-container {
         padding: 0px 16px;
