fix for the scroll in old fund details page.

--- a/react_webviews/src/desktopLayout/DesktopLayout.scss
+++ b/react_webviews/src/desktopLayout/DesktopLayout.scss
@@ -15,7 +15,7 @@
 
   .feature-container {
     width: var(--desktop-width) !important;
-
+    overflow: auto;
     .ContainerWrapper {
       margin: 0px !important;
       max-width: 100% !important;
