--- a/react_webviews/src/pages/fundDetailsV2/ComparisonChart.scss
+++ b/react_webviews/src/pages/fundDetailsV2/ComparisonChart.scss
@@ -1,7 +1,13 @@
 .comparison-chart-wrapper {
-  .comparison-chart-values {
+  .fund-normal-return {
     font-size: 14px;
     font-weight: 400;
     color: #5a6389;
+  }
+
+  .fund-expected-retun {
+    font-size: 14px;
+    font-weight: 500;
+    color: #132056;
   }
 }
