--- a/react_webviews/src/pages/DIY/Search/Search.scss
+++ b/react_webviews/src/pages/DIY/Search/Search.scss
@@ -2,8 +2,13 @@
   height: 100%;
 
   .diy-search-container-main {
-    height: calc(100% - 106px)
+    height: calc(100% - 106px);
   }
+}
+
+.diy-search-wrapper {
+  background-color: white;
+  overflow: hidden;
 }
 
 .diy-search {
@@ -42,7 +47,7 @@
           cursor: pointer;
           display: none;
         }
-        
+
         input:focus + .close-icon {
           display: inline-block;
         }
@@ -73,7 +78,7 @@
   .search-loader {
     width: 100%;
     text-align: center;
-
+    margin-top: 100px;
     .progress-bar {
       color: var(--primary);
     }
@@ -81,7 +86,7 @@
 
   .search-list {
     padding-bottom: 20px;
-    height: 100%;
+    height: 70vh;
     overflow: auto;
     .text {
       padding: 10px 0;
@@ -106,15 +111,14 @@
 
   .error-message {
     text-align: left;
-    color:red;
+    color: red;
   }
 }
 
-
-.diy-search-mob{
+.diy-search-mob {
   background-color: white;
-  .diy-iframe-search-input{
-    .diy-fund-search{
+  .diy-iframe-search-input {
+    .diy-fund-search {
       padding: 12px 20px !important;
     }
   }
@@ -136,7 +140,7 @@
 
   img {
     min-width: 400px;
-    width:100%;
+    width: 100%;
     max-width: 500px;
   }
 }
