Fixed explore bg color

--- a/react_webviews/src/pages/DIY/ExploreCategories/Explore.scss
+++ b/react_webviews/src/pages/DIY/ExploreCategories/Explore.scss
@@ -5,6 +5,10 @@
   }
 }
 
+.diy-explore-wrapper {
+  background-color: white;
+}
+
 #invest-explore {
   .invest-explore-quote {
     color: #c5c5c5;
