fixed product item css.

--- a/react_webviews/src/designSystem/molecules/ProductItem/ProductItem.scss
+++ b/react_webviews/src/designSystem/molecules/ProductItem/ProductItem.scss
@@ -12,5 +12,10 @@
     margin-left: 10px;
     align-self: baseline;
     min-width: fit-content;
+    margin-left: auto;
+    align-items: flex-end;
+    &> * {
+      margin-left: 10px;
+    }
   }
 }
