added css for fund list tab

--- a/react_webviews/src/pages/DIY/SubCategoryFundList/SubCategoryFundList.scss
+++ b/react_webviews/src/pages/DIY/SubCategoryFundList/SubCategoryFundList.scss
@@ -16,6 +16,10 @@
     margin: 0px -16px;
   }
 
+  .fund-list-tab-flex-wrapper {
+    justify-content: flex-start !important;
+  }
+
   .sub-category-custom-footer {
     .sc-confirmation-btn-wrapper {
       max-width: fit-content;
