tooltip in estimation card fix.

--- a/react_webviews/src/designSystem/molecules/EstimationCard/EstimationCard.scss
+++ b/react_webviews/src/designSystem/molecules/EstimationCard/EstimationCard.scss
@@ -12,5 +12,11 @@
     > div {
       display: inline;
     }
+
+    .ec-icon-wrapper {
+      position: relative;
+      top: 2px;
+      cursor: pointer;
+    }
   }
 }
