--- a/react_webviews/src/dashboard/Invest/mini-components/FreedomPlanCard.scss
+++ b/react_webviews/src/dashboard/Invest/mini-components/FreedomPlanCard.scss
@@ -32,6 +32,7 @@
       background-color: #ffffff;
       width: 155px;
       padding: 11px 15px !important;
+      min-width: fit-content;
     }
 
     .fpc-button-arrow {
