--- a/react_webviews/src/login_and_registration/pages/Login/commonStyles.scss
+++ b/react_webviews/src/login_and_registration/pages/Login/commonStyles.scss
@@ -6,15 +6,15 @@
     padding: 8px 0 0 5px;
     width: 100%;
     display: flex;
-    align-items: baseline;
     margin-bottom: 20px;
 
     .country-code {
       width: 80px;
       width: fit-content;
-      margin-bottom: -20px;
-      position: relative;
+      margin-right: 20px;
       top: -8px;
+      display: flex;
+      align-items: center;
 
       .dropdown-without-icon{
         position: relative;
