Added demat charges bottomsheet & moved brokerage charges tile to minicomponent

--- a/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
+++ b/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
@@ -1,3 +1,9 @@
+@mixin fees-subtext {
+  font-size: 11px;
+  line-height: 18px;
+  color: var(--steelgrey);
+}
+
 .kyc-selfie-upload-status {
   .kyc-selfie-upload-status-content {
     .kyc-selfie-upload-status-info {
@@ -28,6 +34,65 @@
       width: 100%;
       min-height: 45px;
     }
+  }
+}
+
+.kyc-brokerage-fees-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 5px 0;
+
+  .kaim-fees-info-text {
+    font-size: 13px;
+    line-height: 21px;
+    color: var(--dark);
+  }
+
+  .kaim-fees-info-subtext {
+    @include fees-subtext();
+  }
+
+  .kaim-no-fees-text1 {
+    font-size: 13px;
+    line-height: 21px;
+    color: var(--dark);
+    text-align: right;
+  }
+
+  .kaim-no-fees-text2 {
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 21px;
+    color: var(--primary);
+    text-align: right;
+  }
+
+  .kaim-fees-info-subvalue {
+    @include fees-subtext();
+    text-align: right;
+  }
+}
+
+.kaim-fit-sb .kaim-fees-info-text {
+  font-size: 13px;
+  color: var(--gunmetal);
+  font-weight: 500;
+}
+
+.kaim-fit-sb-pt20 {
+  padding-top: 15px;
+}
+
+.kaim-fit-amf {
+  .kaim-fees-info-text {
+    font-weight: 500;
+  }
+  .kaim-fees-info-subtext {
+    font-weight: 400;
+  }
+  .kaim-no-fees-text1 {
+    color: var(--steelgrey);
   }
 }
 
