Added landing screen changes

--- a/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
@@ -68,6 +68,10 @@
         color: var(--red);
         font-weight: 500;
       }
+
+      .kyc-account-setup-incomplete {
+        color: var(--dark);
+      }
     }
 
     .kyc-card-image {
