--- a/react_webviews/src/kyc/Digilocker/Digilocker.scss
+++ b/react_webviews/src/kyc/Digilocker/Digilocker.scss
@@ -36,6 +36,7 @@
     text-transform: uppercase;
     font-weight: 500;
     letter-spacing: 1px;
+    text-align: center;
   }
 
   .footer .bottom-image {
