1. Fixed aoc applicable check 2. Added confirm back dialog

--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -121,7 +121,7 @@
         font-size: 11px;
         line-height: 22px;
         text-decoration-line: line-through;
-        color: var(--steelgrey);
+        color: var(--gunmetal);
         margin-right: 5px;
       }
     }
