--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -130,6 +130,12 @@
       border-top: 1px solid #D6D6D6;
       padding: 10px 0;
       cursor: pointer;
+
+      .aabc-title {
+        color: var(--gunmetal);
+        font-weight: 500;
+        font-size: 13px;
+      }
     }
 
     .line-divider {
