--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -13,11 +13,42 @@
 
 .kyc-home {
   line-height: 1.5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   main {
     .input {
       margin: 20px 0;
     }
+  }
+
+  .kh-terms-and-conditions {
+    display: flex;
+    align-items: flex-start;
+
+    .kh-terms-checkbox {
+      width: 24px;
+      height: 24px;
+      
+      .MuiSvgIcon-root {
+        font-size: 16px;
+      }
+    }
+  
+    .kh-tac-text {
+      font-weight: 400;
+      font-size: 11px;
+      line-height: 18px;
+      color: var(--steelgrey);
+    }
+  }
+}
+
+
+@media only screen and (max-width: 767px) {
+  .kyc-home {
+    height: calc(100vh - 220px);
   }
 }
 
