--- a/react_webviews/src/designSystem/molecules/Dropdown/Dropdown.scss
+++ b/react_webviews/src/designSystem/molecules/Dropdown/Dropdown.scss
@@ -5,16 +5,15 @@
   border-bottom-right-radius: 8px;
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
+  max-height: 277px;
+  border-top: 1px solid;
 
   .dropdown-menu-list {
     padding: 0px;
 
     .dropdown-menu-item {
       padding: 12px 16px;
-    }
-
-    .dropdown-menu-item:last-child {
-      padding-bottom: 16px;
+      min-height: 46px;
     }
   }
 }
@@ -25,6 +24,9 @@
 
 .dropdown-popover {
   background-color: transparent !important;
+  ::-webkit-scrollbar {
+    width: 6px !important;
+  }
 }
 
 .dropdown-open {
@@ -34,8 +36,10 @@
 
 @media only screen and (min-width: 786px) {
   .dropdown-popover {
+    left: 0px !important;
+    
     .dropdown-menu-paper {
-      left: 0px !important;
+      max-height: unset !important;
       ul {
         padding: 0px !important;
       }
