Added scroll property

--- a/react_webviews/src/designSystem/molecules/Dropdown/Dropdown.scss
+++ b/react_webviews/src/designSystem/molecules/Dropdown/Dropdown.scss
@@ -39,7 +39,8 @@
     left: 0px !important;
     
     .dropdown-menu-paper {
-      max-height: unset !important;
+      max-height: 277px !important;
+      
       ul {
         padding: 0px !important;
       }
