--- a/react_webviews/src/designSystem/atoms/OrderStep/OrderStep.scss
+++ b/react_webviews/src/designSystem/atoms/OrderStep/OrderStep.scss
@@ -20,14 +20,15 @@
       }
     }
 
-    .aos-title {
-      display: flex;
-      flex-grow: 1;
-    }
-
     .aos-line {
       max-width: 1px;
       align-self: center;
     }
+  }
+
+  .aos-title {
+    display: flex;
+    flex-grow: 1;
+    padding-bottom: 4px;
   }
 }
