--- a/react_webviews/src/designSystem/organisms/BottomSheet/BottomSheet.scss
+++ b/react_webviews/src/designSystem/organisms/BottomSheet/BottomSheet.scss
@@ -16,6 +16,23 @@
   }
 }
 
+.bottom-sheet-icon-wrapper {
+  text-align: center;
+
+  .btn-sheet-img {
+    margin: 40px auto 32px;
+  }
+
+  .btn-sheet-title {
+    width: 100%;
+    text-align: center;
+  }
+
+  .btn-sheet-subtitle {
+    margin-top: 0px;
+  }
+}
+
 @media only screen and (min-width: 600px) {
   .bottom-sheet-wrapper {
     margin-top: 16px;
