--- a/react_webviews/src/designSystem/atoms/MenuOverlay/MenuOverlay.scss
+++ b/react_webviews/src/designSystem/atoms/MenuOverlay/MenuOverlay.scss
@@ -19,3 +19,10 @@
     margin-top: 0px;
   }
 }
+
+@media only screen and (min-width: 786px) {
+  .MuiModal-root.MuiPopover-root.molecule-menu-overlay {
+    left: 0px !important;
+    max-width: 100% !important;
+  }
+}
