--- a/react_webviews/src/designSystem/atoms/MenuOverlay/MenuOverlay.scss
+++ b/react_webviews/src/designSystem/atoms/MenuOverlay/MenuOverlay.scss
@@ -1,11 +1,11 @@
 .molecule-menu-overlay {
   .MuiPaper-root {
+    margin: 3px;
     min-width: 196px;
     box-shadow: 0px 6px 12px -6px rgba(0, 0, 0, 0.04),
       0px 0px 1px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
     max-height: unset !important;
-    transition-duration: 300ms !important;
     background-color: white;
   }
 
