1. Updated init status condition 2. Fixed image merge handling

--- a/react_webviews/src/pages/Nominee/AddressDetails/AddressDetails.scss
+++ b/react_webviews/src/pages/Nominee/AddressDetails/AddressDetails.scss
@@ -8,5 +8,12 @@
   .molecule-dropdown,
   .nad-info-wrapper {
     margin-top: 16px;
+    position: relative;
+
+    .nad-info-img {
+      width: 1px !important;
+      height: 1px !important;
+      position: absolute;
+    }
   }
 }
