Fixed address details css

--- a/react_webviews/src/pages/Nominee/AddressDetails/AddressDetails.scss
+++ b/react_webviews/src/pages/Nominee/AddressDetails/AddressDetails.scss
@@ -1,5 +1,9 @@
-.nominee-personal-details {
+.nominee-address-details {
   background-color: white;
+
+  .nominee-address-wrapper {
+    padding-bottom: 40px;
+  }
 
   .input-field-wrapper {
     margin-top: 16px;
